# factory-production-notice-agent

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  agent_interface.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: notice_defaults.json  notice_schema.json  notice_templates.json  scenario_profiles.json
docs/: ARCHITECTURE.md  OPERATIONS_PLAYBOOK.md  PRIVACY.md  QUALITY.md  agent-contract.html  index.html  showcase.html
docs/adr/: 0001-contract-first-public-demo.md  0002-local-first-human-gate.md
sample_data/: demo_notice_request.json  legacy_manufacturing_notice_request.json  maintenance_notice_request.json  production_notice_request.json  scheduling_plan.json
sample_data/csv/: work_package_notices.csv
sample_data/custom_templates/: custom_fixture_template.json
scripts/: package_project.py  run_demo.cmd  verify_package.py
skills/production-notice-generator/: SKILL.md
src/factory_production_notice/: __init__.py  agent_contract.py  cli.py  csv_adapter.py  generator.py  io_utils.py  models.py  profiles.py  schedule_adapter.py  server.py  templates.py  validation.py
tests/: test_generation.py
workflows/: agent_workflow.md
