[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-production-notice-agent"
version = "0.4.0"
description = "Generate operations notice workbooks from structured JSON or CSV work-package requests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Felix Zuo" }]
dependencies = ["openpyxl>=3.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
operations-notice = "factory_production_notice.cli:main"
production-notice = "factory_production_notice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
